<?xml version="1.0" encoding="utf-8"?>

<resources>
    <string name="app_name" translatable="false">Xperia Parts</string>
    <string name="app_summary" translatable="false">Configure device specific settings</string>

    <!-- Display Settings -->
    <string name="display_title">Display</string>
    <string name="display_setting_header">Image Quality Settings</string>
    <string name="display_setting_summary">Choose between brilliant colors or a faithful reproduction of the creator\'s intended vision to create an unforgettable visual experience</string>

    <!-- Sound Settings -->
    <string name="sound_title">Sound</string>
    <string name="audio_setting_header">Audio Settings</string>
    <string name="audio_setting_summary">Elevate your auditory experience with the Dolby Sound EQ and the 360 Reality Audio app for remarkable and immersive audio playback</string>

    <!-- Audio Settings -->
    <string name="advanced_audio_title">@string/audio_setting_header</string>
    <string name="advanced_audio_setting_summary">Sound Quality</string>
    <string name="dolby_title">Dolby Sound</string>
    <string name="dolby_summary">Adjust Dolby Sound settings to experience immersive, multidimensional sound that envelops you, bringing movies, music, and games to life</string>
    <string name="threesixtyra_setting_header">360 Reality Audio</string>
    <string name="threesixtyra_summary">Personalize spatial sound settings and transform ordinary stereo audio sources into captivating auditory experiences</string>
    <string name="effectpriority_setting_header">Effect Priority</string>
    <string name="effectpriority_summary">The 360 Upmix app will always take priority over the other effects you\'ve turned on (either Dolby Sound with 360 Upmix or just 360 Upmix by itself) for the media sound of the apps registered here.</string>
    <string name="audio_setting_explained">While playing Dolby Sound content or 360 Reality Audio content, the content\'s information will take precedence over the settings on this screen.
High resolution content can also be play properly when both Dolby Sound and 360 Upmix are turned off.\n
\n
\n
\n
About Spatial Audio\n
To enable the 360 Reality Audio feature, turn on Spatial Sound.\n
Dolby Sound does support Spatial Audio.</string>

    <!-- Charging Settings Main Menu -->
    <string name="charging_title">Charging</string>
    <string name="charger_setting_header">Battery Care</string>
    <string name="charger_setting_summary">Optimize battery longevity by adjusting the maximum charging percentage and fine-tuning other charging settings</string>

    <!-- USB Section | External Monitor -->
    <string name="usb_title">USB</string>
    <string name="usb_extmonitor_setting_header">External Monitor</string>
    <string name="usb_extmonitor_summary">Enable the External Monitor app to customize external camera settings and utilize your Xperia\'s display as a reliable and accurate viewfinder for capturing vibrant, true-to-life colors</string>

    <!-- USB Video Output -->
    <string name="usbv_setting_header">External Video Output</string>
    <string name="usbv_setting_summary">Customize the video settings to your preference when outputting to an external device via the USB port</string>

    <!-- USB Audio Output -->
    <string name="usba_setting_header">External Audio Output</string>
    <string name="usba_setting_summary">Adjust media, in-call or the microphone\'s audio volume when outputting sound to an external device via the USB port</string>

    <!-- DSM (DualShock/Sense Manager) -->
    <string name="gc_title">Game Controller</string>
    <string name="gc_dsm_setting_header">Wireless Controller for PS5 &amp; PS4</string>
    <string name="gc_dsm_setting_summary">Connect your PlayStation© controllers to your Xperia device to utilize them for gaming</string>
</resources>