<?xml version="1.0" encoding="utf-8"?>
<!--
 * Copyright (C) 2023 The LineageOS Project
 * SPDX-License-Identifier: Apache-2.0
-->
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:title="@string/app_name">

    <PreferenceCategory
        android:key="display"
        android:title="@string/display_title">

        <Preference
            android:key="advanced_disp_settings"
            android:icon="@drawable/ic_display_enhance"
            android:title="@string/display_setting_header"
            android:summary="@string/display_setting_summary">
            <intent
                android:action="android.intent.action.MAIN"
                android:targetPackage="com.sony.display"
                android:targetClass="com.sony.display.MainActivity" />
        </Preference>

    </PreferenceCategory>

    <PreferenceCategory
        android:key="dolby"
        android:title="@string/dolby_category">

       <Preference
            android:key="audio_dolby_atmos"
            android:icon="@drawable/ic_dolby"
            android:title="@string/dolby_title"
            android:summary="@string/dolby_summary"
            android:persistent="false">
            <intent
                 android:targetPackage="com.dolby.daxappui2"
                 android:targetClass="com.dolby.daxappui2.MainActivity" />
        </Preference>

       <Preference
            android:key="audio_threesixtyra"
            android:icon="@drawable/ic_threesixtyra"
            android:title="@string/threesixtyra_setting_header"
            android:summary="@string/threesixtyra_summary"
            android:persistent="false">
            <intent
                 android:targetPackage="jp.co.sony.threesixtyra.lite"
                 android:targetClass="ru.g000sha256.bass_booster.MainActivity" />
        </Preference>

    </PreferenceCategory>

    <PreferenceCategory
        android:key="charging"
        android:title="@string/charging_title">

        <Preference
            android:key="advanced_charger_settings"
            android:icon="@drawable/ic_battery_care"
            android:title="@string/charger_setting_header"
            android:summary="@string/charger_setting_summary"
            android:persistent="false">
            <intent
                android:targetPackage="crazyboyfeng.accSettings"
                android:targetClass="crazyboyfeng.accSettings.SettingsActivity" />
        </Preference>

    </PreferenceCategory>

    <PreferenceCategory
        android:key="usb"
        android:title="@string/usb_title">

       <Preference
            android:key="usb_external_monitor_settings"
            android:icon="@drawable/ic_external_monitor"
            android:title="@string/usb_extmonitor_setting_header"
            android:summary="@string/usb_extmonitor_summary"
            android:persistent="false">
            <intent
                 android:targetPackage="com.sonymobile.extmonitorapp"
                 android:targetClass="com.sonymobile.extmonitorapp.settings.SettingsAppLauncherActivity" />
        </Preference>

        <Preference
            android:key="usb_video"
            android:icon="@drawable/ic_usb_video"
            android:title="@string/usbv_setting_header"
            android:summary="@string/usbv_setting_summary"
            android:persistent="false">
            <intent
                android:targetPackage="com.sonyericsson.usbux"
                android:targetClass="com.sonyericsson.usbux.settings.DisplayPortSettingsActivity" />
        </Preference>

        <Preference
            android:key="usb_audio"
            android:icon="@drawable/ic_usb_audio"
            android:title="@string/usba_setting_header"
            android:summary="@string/usba_setting_summary"
            android:persistent="false">
            <intent
                android:targetPackage="jp.co.sony.mc.usbextoutaudio"
                android:targetClass="jp.co.sony.mc.usbextoutaudio.AudioSettingsActivity" />
        </Preference>

    </PreferenceCategory>

    <PreferenceCategory
        android:key="gc"
        android:title="@string/gc_title">

       <Preference
            android:key="gc_dsm_settings"
            android:icon="@drawable/ic_gc_dsm"
            android:title="@string/gc_dsm_setting_header"
            android:summary="@string/gc_dsm_setting_summary"
            android:persistent="false">
            <intent
                 android:targetPackage="com.sonymobile.dualshockmanager"
                 android:targetClass="com.sonymobile.dualshockmanager.Ds4SetUpActivity" />
        </Preference>

    </PreferenceCategory>

</PreferenceScreen>
